--- a/src/wordcounter/FXMLDocument.fxml
+++ b/src/wordcounter/FXMLDocument.fxml
@@ -8,9 +8,9 @@
 <?import javafx.scene.layout.*?>
 
 
-<VBox alignment="TOP_CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="720.0" minWidth="1280.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="wordcounter.FXMLDocumentController">
+<VBox alignment="TOP_CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="720.0" minWidth="1280.0" styleClass="root" stylesheets="@../assets/style.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="wordcounter.FXMLDocumentController">
    <children>
-      <TextArea fx:id="wordCounter" prefHeight="615.0" prefWidth="1280.0" promptText="Paste your words here">
+      <TextArea fx:id="wordCounter" prefHeight="615.0" prefWidth="1280.0" promptText="Paste your words here" styleClass="text-area" wrapText="true">
          <VBox.margin>
             <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
          </VBox.margin>
@@ -40,17 +40,17 @@
                   </VBox>
                   <VBox alignment="CENTER">
                      <children>
-                        <Label fx:id="wordCountLabel">
+                        <Label fx:id="wordCountLabelFill">
                            <VBox.margin>
                               <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                            </VBox.margin>
                         </Label>
-                        <Label fx:id="dotCountLabel">
+                        <Label fx:id="dotCountLabelFill">
                            <VBox.margin>
                               <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                            </VBox.margin>
                         </Label>
-                        <Label fx:id="sentenceCountLabel">
+                        <Label fx:id="sentenceCountLabelFill">
                            <VBox.margin>
                               <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                            </VBox.margin>
