Added word, letter and sentence counter for TextArea

--- a/src/wordcounter/FXMLDocument.fxml
+++ b/src/wordcounter/FXMLDocument.fxml
@@ -26,7 +26,7 @@
                               <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                            </VBox.margin>
                         </Label>
-                        <Label text="Amount of dots:">
+                        <Label text="Amount of letters:">
                            <VBox.margin>
                               <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                            </VBox.margin>
@@ -45,7 +45,7 @@
                               <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                            </VBox.margin>
                         </Label>
-                        <Label fx:id="dotCountLabelFill">
+                        <Label fx:id="tokenCountLabelFill">
                            <VBox.margin>
                               <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                            </VBox.margin>
